<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_key_base_settings"
        android:title="@string/pref_title_base_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_netmode_settings"
            android:summary="@string/pref_summary_netmode_settings"
            android:title="@string/pref_title_netmode_settings" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_autodownload_settings"
            android:summary="@string/pref_summary_autodownload_settings"
            android:title="@string/pref_title_autodownload_settings" />
        <Preference
            android:key="@string/pref_key_clearcache_settings"
            android:summary="@string/pref_summary_clearcache_settings"
            android:title="@string/pref_title_clearcache_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_key_account_settings"
        android:title="@string/pref_title_account_settings">
        <PreferenceScreen
            android:key="@string/pref_key_accountsafe_settings"
            android:summary="@string/pref_summary_accountsafe_settings"
            android:title="@string/pref_title_accountsafe_settings">
            <PreferenceCategory
                android:key="@string/pref_key_accountmanager_settings"
                android:title="@string/pref_title_accountmanager_settings">
                <Preference
                    android:key="@string/pref_key_email_settings"
                    android:summary="@string/pref_summary_email_settings"
                    android:title="@string/pref_title_email_settings" />
                <Preference
                    android:key="@string/pref_key_phone_settings"
                    android:summary="@string/pref_summary_phone_settings"
                    android:title="@string/pref_title_phone_settings" />
                <Preference
                    android:key="@string/pref_key_password_settings"
                    android:summary="@string/pref_summary_password_settings"
                    android:title="@string/pref_title_password_settings" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="@string/pref_key_sc_settings"
                android:title="@string/pref_title_sc_settings">
                <SwitchPreference
                    android:key="@string/pref_key_wx_settings"
                    android:summary="@string/pref_summary_wx_settings"
                    android:title="@string/pref_title_wx_settings" />
                <SwitchPreference
                    android:key="@string/pref_key_qq_settings"
                    android:summary="@string/pref_summary_qq_settings"
                    android:title="@string/pref_title_qq_settings" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_key_abouthelp_settings"
        android:title="@string/pref_title_abouthelp_settings">
        <EditTextPreference
            android:key="@string/pref_key_suggest_settings"
            android:title="@string/pref_title_suggest_settings" />
        <Preference
            android:key="@string/pref_key_opensource_settings"
            android:title="@string/pref_title_opensource_settings" />
        <Preference
            android:key="@string/pref_key_checkipdate_settings"
            android:summary="@string/pref_summary_checkipdate_settings"
            android:title="@string/pref_title_checkipdate_settings" />
        <Preference
            android:key="@string/pref_key_deal_settings"
            android:title="@string/pref_title_deal_settings" />
        <Preference
            android:key="@string/pref_key_connect_settings"
            android:title="@string/pref_title_connect_settings" />
        <Preference
            android:key="@string/pref_key_logout_settings"
            android:title="@string/pref_title_logout_settings" />
    </PreferenceCategory>
</PreferenceScreen>