<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdjy.book.view.activity.LoginByPhoneActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_civ"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="#00000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/please_input_phone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_civ" />

    <EditText
        android:id="@+id/code_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/please_input_CAPTCHA"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/code_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_et" />

    <Button
        android:id="@+id/code_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTealPrimary"
        android:text="@string/CAPTCHA"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_et" />

    <CheckBox
        android:id="@+id/isread_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_et" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorTealPrimary"
        android:text="@string/phone_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isread_cb" />

    <ImageView
        android:id="@+id/qqlogin_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/profile_civ"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"
        app:srcCompat="@drawable/ic_qq" />

    <ImageView
        android:id="@+id/wxlogin_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/profile_civ"
        app:layout_constraintTop_toBottomOf="@+id/register_tv"
        app:srcCompat="@drawable/ic_wx" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/I_read_agree"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toEndOf="@+id/isread_cb" />

    <TextView
        android:id="@+id/userpro_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/protocol"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/qq_login"
        app:layout_constraintEnd_toEndOf="@+id/qqlogin_iv"
        app:layout_constraintStart_toStartOf="@+id/qqlogin_iv"
        app:layout_constraintTop_toBottomOf="@+id/qqlogin_iv" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wx_login"
        app:layout_constraintEnd_toEndOf="@+id/wxlogin_iv"
        app:layout_constraintStart_toStartOf="@+id/wxlogin_iv"
        app:layout_constraintTop_toBottomOf="@+id/wxlogin_iv" />
</android.support.constraint.ConstraintLayout>
