<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background"
    tools:context="com.sdjy.book.view.fragment.UserFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_civ"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#00000000"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/profile_civ"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_page_info"
                app:layout_constraintStart_toEndOf="@+id/profile_civ"
                app:layout_constraintTop_toBottomOf="@+id/name_tv" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/list_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_civ" />

            <ImageView
                android:id="@+id/comm_contri_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_wxb_48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:text="@string/community_contri"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comm_contri_iv"
                tools:ignore="SmallSp" />

            <View
                android:id="@+id/view5"
                android:layout_width="1dp"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/list_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/comm_contri_iv"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <ImageView
                android:id="@+id/setting_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_set_48dp"
                app:layout_constraintStart_toEndOf="@+id/comm_contri_iv"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="5dp"
                android:text="@string/setting"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/setting_iv"
                tools:ignore="SmallSp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/list_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</android.support.constraint.ConstraintLayout>
